compiler/kernc_cli/tests/soundness/run-pass/projection/chained_projection_name_collision_normalizes.rn
// class: projection-normalization
// source: an impl-associated type target may use a concrete type with the same name without getting shadowed by the impl placeholder
// exit: 0

type Step = trait {
    type Mid;
};

type Finish = trait {
    type Out;
};

type Mid = struct {};
type Bytes = []u8;

impl Bytes: Step {
    type Mid = Mid;
}

impl Mid: Finish {
    type Out = i32;
}

fn project(value: Bytes) Bytes.Step.Mid.Finish.Out {
    _ = value;
    return 7;
}

fn main() i32 {
    let value = project("ok");
    return if (value == 7) { 0 } else { 1 };
}
